// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiSuperSelect is rendered 1`] = `
<div
  class="euiPopover euiPopover--anchorDownCenter euiSuperSelect"
>
  <div
    class="euiPopover__anchor"
  >
    <input
      type="hidden"
      value=""
    />
    <div
      class="euiFormControlLayout"
    >
      <div
        class="euiFormControlLayout__childrenWrapper"
      >
        <span
          class="euiScreenReaderOnly"
          id="generated-id"
        >
          Select an option: , is selected
        </span>
        <button
          aria-haspopup="true"
          aria-label="aria-label"
          aria-labelledby="undefined generated-id"
          class="euiSuperSelectControl testClass1 testClass2"
          data-test-subj="test subject string"
          role="option"
          type="button"
        />
        <div
          class="euiFormControlLayoutIcons euiFormControlLayoutIcons--right"
        >
          <span
            class="euiFormControlLayoutCustomIcon"
          >
            <svg
              aria-hidden="true"
              class="euiIcon euiIcon--medium euiFormControlLayoutCustomIcon__icon"
              focusable="false"
              height="16"
              viewBox="0 0 16 16"
              width="16"
              xlink="http://www.w3.org/1999/xlink"
              xmlns="http://www.w3.org/2000/svg"
            >
              <defs>
                <path
                  d="M13.069 5.157L8.384 9.768a.546.546 0 0 1-.768 0L2.93 5.158a.552.552 0 0 0-.771 0 .53.53 0 0 0 0 .759l4.684 4.61c.641.631 1.672.63 2.312 0l4.684-4.61a.53.53 0 0 0 0-.76.552.552 0 0 0-.771 0z"
                  id="arrow_down-a"
                />
              </defs>
              <use
                fill-rule="nonzero"
                href="#arrow_down-a"
              />
            </svg>
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`EuiSuperSelect props custom display is propagated to dropdown 1`] = `
<div
  class="euiPopover euiPopover--anchorDownCenter euiSuperSelect"
>
  <div
    class="euiPopover__anchor"
  >
    <input
      type="hidden"
      value=""
    />
    <div
      class="euiFormControlLayout"
    >
      <div
        class="euiFormControlLayout__childrenWrapper"
      >
        <span
          class="euiScreenReaderOnly"
          id="generated-id"
        >
          Select an option: , is selected
        </span>
        <button
          aria-haspopup="true"
          aria-labelledby="undefined generated-id"
          class="euiSuperSelectControl euiSuperSelect--isOpen__button"
          data-test-subj="superSelect"
          role="option"
          type="button"
        />
        <div
          class="euiFormControlLayoutIcons euiFormControlLayoutIcons--right"
        >
          <span
            class="euiFormControlLayoutCustomIcon"
          >
            <svg
              aria-hidden="true"
              class="euiIcon euiIcon--medium euiFormControlLayoutCustomIcon__icon"
              focusable="false"
              height="16"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
              xmlns:xlink="http://www.w3.org/1999/xlink"
            >
              <defs>
                <path
                  d="M13.069 5.157L8.384 9.768a.546.546 0 0 1-.768 0L2.93 5.158a.552.552 0 0 0-.771 0 .53.53 0 0 0 0 .759l4.684 4.61c.641.631 1.672.63 2.312 0l4.684-4.61a.53.53 0 0 0 0-.76.552.552 0 0 0-.771 0z"
                  id="arrow_down-a"
                />
              </defs>
              <use
                fill-rule="nonzero"
                xlink:href="#arrow_down-a"
              />
            </svg>
          </span>
        </div>
      </div>
    </div>
  </div>
  <div>
    <div
      aria-live="assertive"
      class="euiPanel euiPopover__panel euiPopover__panel--bottom euiPopover__panel-noArrow euiSuperSelect__popoverPanel"
      style="top: 8px; left: -22px; z-index: 0;"
    >
      <div
        class="euiPopover__panelArrow euiPopover__panelArrow--bottom"
      />
      <div>
        <p
          class="euiScreenReaderOnly"
          role="alert"
        >
          You are in a form selector of 2 items and must select a single option. Use the up and down keys to navigate or escape to close.
        </p>
        <div
          role="listbox"
        >
          <button
            class="euiContextMenuItem euiSuperSelect__item"
            id="1"
            role="option"
            type="button"
          >
            <span
              class="euiContextMenu__itemLayout"
            >
              <svg
                class="euiIcon euiIcon--medium euiContextMenu__icon"
                focusable="false"
                height="16"
                viewBox="0 0 16 16"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              />
              <span
                class="euiContextMenuItem__text"
              >
                Custom Display #1
              </span>
            </span>
          </button>
          <button
            class="euiContextMenuItem euiSuperSelect__item"
            id="2"
            role="option"
            type="button"
          >
            <span
              class="euiContextMenu__itemLayout"
            >
              <svg
                class="euiIcon euiIcon--medium euiContextMenu__icon"
                focusable="false"
                height="16"
                viewBox="0 0 16 16"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              />
              <span
                class="euiContextMenuItem__text"
              >
                Custom Display #2
              </span>
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`EuiSuperSelect props more props are propogated to each option 1`] = `
<div
  class="euiPopover euiPopover--anchorDownCenter euiSuperSelect"
>
  <div
    class="euiPopover__anchor"
  >
    <input
      type="hidden"
      value="1"
    />
    <div
      class="euiFormControlLayout"
    >
      <div
        class="euiFormControlLayout__childrenWrapper"
      >
        <span
          class="euiScreenReaderOnly"
          id="generated-id"
        >
          Select an option: Option #1, is selected
        </span>
        <button
          aria-haspopup="true"
          aria-labelledby="undefined generated-id"
          class="euiSuperSelectControl euiSuperSelect--isOpen__button"
          data-test-subj="superSelect"
          role="option"
          type="button"
        >
          Option #1
        </button>
        <div
          class="euiFormControlLayoutIcons euiFormControlLayoutIcons--right"
        >
          <span
            class="euiFormControlLayoutCustomIcon"
          >
            <svg
              aria-hidden="true"
              class="euiIcon euiIcon--medium euiFormControlLayoutCustomIcon__icon"
              focusable="false"
              height="16"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
              xmlns:xlink="http://www.w3.org/1999/xlink"
            >
              <defs>
                <path
                  d="M13.069 5.157L8.384 9.768a.546.546 0 0 1-.768 0L2.93 5.158a.552.552 0 0 0-.771 0 .53.53 0 0 0 0 .759l4.684 4.61c.641.631 1.672.63 2.312 0l4.684-4.61a.53.53 0 0 0 0-.76.552.552 0 0 0-.771 0z"
                  id="arrow_down-a"
                />
              </defs>
              <use
                fill-rule="nonzero"
                xlink:href="#arrow_down-a"
              />
            </svg>
          </span>
        </div>
      </div>
    </div>
  </div>
  <div>
    <div
      aria-live="assertive"
      class="euiPanel euiPopover__panel euiPopover__panel--bottom euiPopover__panel-noArrow euiSuperSelect__popoverPanel"
      style="top: 8px; left: -22px; z-index: 0;"
    >
      <div
        class="euiPopover__panelArrow euiPopover__panelArrow--bottom"
      />
      <div>
        <p
          class="euiScreenReaderOnly"
          role="alert"
        >
          You are in a form selector of 2 items and must select a single option. Use the up and down keys to navigate or escape to close.
        </p>
        <div
          aria-activedescendant="1"
          role="listbox"
        >
          <button
            class="euiContextMenuItem euiSuperSelect__item euiContextMenuItem-isDisabled"
            disabled=""
            id="1"
            role="option"
            type="button"
          >
            <span
              class="euiContextMenu__itemLayout"
            >
              <svg
                class="euiIcon euiIcon--medium euiContextMenu__icon"
                focusable="false"
                height="16"
                viewBox="0 0 16 16"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M6.5 12a.502.502 0 0 1-.354-.146l-4-4a.502.502 0 0 1 .708-.708L6.5 10.793l6.646-6.647a.502.502 0 0 1 .708.708l-7 7A.502.502 0 0 1 6.5 12"
                />
              </svg>
              <span
                class="euiContextMenuItem__text"
              >
                Option #1
              </span>
            </span>
          </button>
          <button
            class="euiContextMenuItem euiSuperSelect__item"
            data-test-subj="option two"
            id="2"
            role="option"
            type="button"
          >
            <span
              class="euiContextMenu__itemLayout"
            >
              <svg
                class="euiIcon euiIcon--medium euiContextMenu__icon"
                focusable="false"
                height="16"
                viewBox="0 0 16 16"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              />
              <span
                class="euiContextMenuItem__text"
              >
                Option #2
              </span>
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`EuiSuperSelect props more props are propogated to each option 2`] = `
<EuiSuperSelect
  data-test-subj="superSelect"
  onChange={[Function]}
  options={
    Array [
      Object {
        "disabled": true,
        "inputDisplay": "Option #1",
        "value": "1",
      },
      Object {
        "data-test-subj": "option two",
        "inputDisplay": "Option #2",
        "value": "2",
      },
    ]
  }
  valueOfSelected="1"
>
  <EuiPopover
    anchorPosition="downCenter"
    button={
      <EuiSuperSelectControl
        className="euiSuperSelect--isOpen__button"
        compressed={false}
        data-test-subj="superSelect"
        fullWidth={false}
        isLoading={false}
        onChange={[Function]}
        onClick={[Function]}
        onKeyDown={[Function]}
        options={
          Array [
            Object {
              "disabled": true,
              "inputDisplay": "Option #1",
              "value": "1",
            },
            Object {
              "data-test-subj": "option two",
              "inputDisplay": "Option #2",
              "value": "2",
            },
          ]
        }
        value="1"
      />
    }
    className="euiSuperSelect"
    closePopover={[Function]}
    hasArrow={false}
    isOpen={true}
    ownFocus={false}
    panelClassName="euiSuperSelect__popoverPanel"
    panelPaddingSize="none"
    popoverRef={[Function]}
  >
    <EuiOutsideClickDetector
      onOutsideClick={[Function]}
    >
      <div
        className="euiPopover euiPopover--anchorDownCenter euiSuperSelect"
        onClick={[Function]}
        onKeyDown={[Function]}
      >
        <div
          className="euiPopover__anchor"
        >
          <EuiSuperSelectControl
            className="euiSuperSelect--isOpen__button"
            compressed={false}
            data-test-subj="superSelect"
            fullWidth={false}
            isLoading={false}
            onChange={[Function]}
            onClick={[Function]}
            onKeyDown={[Function]}
            options={
              Array [
                Object {
                  "disabled": true,
                  "inputDisplay": "Option #1",
                  "value": "1",
                },
                Object {
                  "data-test-subj": "option two",
                  "inputDisplay": "Option #2",
                  "value": "2",
                },
              ]
            }
            value="1"
          >
            <input
              type="hidden"
              value="1"
            />
            <EuiFormControlLayout
              compressed={false}
              fullWidth={false}
              icon={
                Object {
                  "side": "right",
                  "type": "arrowDown",
                }
              }
              isLoading={false}
            >
              <div
                className="euiFormControlLayout"
              >
                <div
                  className="euiFormControlLayout__childrenWrapper"
                >
                  <EuiScreenReaderOnly>
                    <span
                      className="euiScreenReaderOnly"
                      id="generated-id"
                    >
                      Select an option: 
                      Option #1
                      , is selected
                    </span>
                  </EuiScreenReaderOnly>
                  <button
                    aria-haspopup="true"
                    aria-labelledby="undefined generated-id"
                    className="euiSuperSelectControl euiSuperSelect--isOpen__button"
                    data-test-subj="superSelect"
                    onChange={[Function]}
                    onClick={[Function]}
                    onKeyDown={[Function]}
                    role="option"
                    type="button"
                  >
                    Option #1
                  </button>
                  <EuiFormControlLayoutIcons
                    icon={
                      Object {
                        "side": "right",
                        "type": "arrowDown",
                      }
                    }
                    isLoading={false}
                  >
                    <div
                      className="euiFormControlLayoutIcons euiFormControlLayoutIcons--right"
                    >
                      <EuiFormControlLayoutCustomIcon
                        type="arrowDown"
                      >
                        <span
                          className="euiFormControlLayoutCustomIcon"
                        >
                          <EuiIcon
                            aria-hidden="true"
                            className="euiFormControlLayoutCustomIcon__icon"
                            size="m"
                            type="arrowDown"
                          >
                            <arrowDown
                              aria-hidden="true"
                              className="euiIcon euiIcon--medium euiFormControlLayoutCustomIcon__icon"
                              focusable="false"
                              height="16"
                              style={null}
                              viewBox="0 0 16 16"
                              width="16"
                              xmlns="http://www.w3.org/2000/svg"
                              xmlnsXlink="http://www.w3.org/1999/xlink"
                            >
                              <svg
                                aria-hidden="true"
                                className="euiIcon euiIcon--medium euiFormControlLayoutCustomIcon__icon"
                                focusable="false"
                                height="16"
                                style={null}
                                viewBox="0 0 16 16"
                                width="16"
                                xmlns="http://www.w3.org/2000/svg"
                                xmlnsXlink="http://www.w3.org/1999/xlink"
                              >
                                <defs>
                                  <path
                                    d="M13.069 5.157L8.384 9.768a.546.546 0 0 1-.768 0L2.93 5.158a.552.552 0 0 0-.771 0 .53.53 0 0 0 0 .759l4.684 4.61c.641.631 1.672.63 2.312 0l4.684-4.61a.53.53 0 0 0 0-.76.552.552 0 0 0-.771 0z"
                                    id="arrow_down-a"
                                  />
                                </defs>
                                <use
                                  fillRule="nonzero"
                                  xlinkHref="#arrow_down-a"
                                />
                              </svg>
                            </arrowDown>
                          </EuiIcon>
                        </span>
                      </EuiFormControlLayoutCustomIcon>
                    </div>
                  </EuiFormControlLayoutIcons>
                </div>
              </div>
            </EuiFormControlLayout>
          </EuiSuperSelectControl>
        </div>
        <EuiPortal>
          <FocusTrap
            _createFocusTrap={[Function]}
            active={false}
            focusTrapOptions={
              Object {
                "clickOutsideDeactivates": true,
                "initialFocus": undefined,
              }
            }
            paused={false}
            tag="div"
          >
            <div>
              <EuiPanel
                aria-live="assertive"
                className="euiPopover__panel euiPopover__panel--bottom euiPopover__panel-noArrow euiSuperSelect__popoverPanel"
                grow={true}
                hasShadow={false}
                paddingSize="none"
                panelRef={[Function]}
                style={
                  Object {
                    "left": -22,
                    "top": 8,
                    "zIndex": "0",
                  }
                }
              >
                <div
                  aria-live="assertive"
                  className="euiPanel euiPopover__panel euiPopover__panel--bottom euiPopover__panel-noArrow euiSuperSelect__popoverPanel"
                  style={
                    Object {
                      "left": -22,
                      "top": 8,
                      "zIndex": "0",
                    }
                  }
                >
                  <div
                    className="euiPopover__panelArrow euiPopover__panelArrow--bottom"
                    style={null}
                  />
                  <EuiMutationObserver
                    observerOptions={
                      Object {
                        "attributes": true,
                        "characterData": true,
                        "childList": true,
                        "subtree": true,
                      }
                    }
                    onMutation={[Function]}
                  >
                    <div>
                      <EuiScreenReaderOnly>
                        <p
                          className="euiScreenReaderOnly"
                          role="alert"
                        >
                          You are in a form selector of 
                          2
                           items and must select a single option. Use the up and down keys to navigate or escape to close.
                        </p>
                      </EuiScreenReaderOnly>
                      <div
                        aria-activedescendant="1"
                        role="listbox"
                      >
                        <EuiContextMenuItem
                          buttonRef={[Function]}
                          className="euiSuperSelect__item"
                          disabled={true}
                          icon="check"
                          id="1"
                          key="0"
                          layoutAlign="center"
                          onClick={[Function]}
                          onKeyDown={[Function]}
                          role="option"
                          style={
                            Object {
                              "width": null,
                            }
                          }
                          toolTipPosition="right"
                        >
                          <button
                            className="euiContextMenuItem euiSuperSelect__item euiContextMenuItem-isDisabled"
                            disabled={true}
                            id="1"
                            onClick={[Function]}
                            onKeyDown={[Function]}
                            role="option"
                            style={
                              Object {
                                "width": null,
                              }
                            }
                            type="button"
                          >
                            <span
                              className="euiContextMenu__itemLayout"
                            >
                              <EuiIcon
                                className="euiContextMenu__icon"
                                size="m"
                                type="check"
                              >
                                <check
                                  className="euiIcon euiIcon--medium euiContextMenu__icon"
                                  focusable="false"
                                  height="16"
                                  style={null}
                                  viewBox="0 0 16 16"
                                  width="16"
                                  xmlns="http://www.w3.org/2000/svg"
                                >
                                  <svg
                                    className="euiIcon euiIcon--medium euiContextMenu__icon"
                                    focusable="false"
                                    height="16"
                                    style={null}
                                    viewBox="0 0 16 16"
                                    width="16"
                                    xmlns="http://www.w3.org/2000/svg"
                                  >
                                    <path
                                      d="M6.5 12a.502.502 0 0 1-.354-.146l-4-4a.502.502 0 0 1 .708-.708L6.5 10.793l6.646-6.647a.502.502 0 0 1 .708.708l-7 7A.502.502 0 0 1 6.5 12"
                                    />
                                  </svg>
                                </check>
                              </EuiIcon>
                              <span
                                className="euiContextMenuItem__text"
                              >
                                Option #1
                              </span>
                            </span>
                          </button>
                        </EuiContextMenuItem>
                        <EuiContextMenuItem
                          buttonRef={[Function]}
                          className="euiSuperSelect__item"
                          data-test-subj="option two"
                          icon="empty"
                          id="2"
                          key="1"
                          layoutAlign="center"
                          onClick={[Function]}
                          onKeyDown={[Function]}
                          role="option"
                          style={
                            Object {
                              "width": null,
                            }
                          }
                          toolTipPosition="right"
                        >
                          <button
                            className="euiContextMenuItem euiSuperSelect__item"
                            data-test-subj="option two"
                            id="2"
                            onClick={[Function]}
                            onKeyDown={[Function]}
                            role="option"
                            style={
                              Object {
                                "width": null,
                              }
                            }
                            type="button"
                          >
                            <span
                              className="euiContextMenu__itemLayout"
                            >
                              <EuiIcon
                                className="euiContextMenu__icon"
                                size="m"
                                type="empty"
                              >
                                <empty
                                  className="euiIcon euiIcon--medium euiContextMenu__icon"
                                  focusable="false"
                                  height="16"
                                  style={null}
                                  viewBox="0 0 16 16"
                                  width="16"
                                  xmlns="http://www.w3.org/2000/svg"
                                >
                                  <svg
                                    className="euiIcon euiIcon--medium euiContextMenu__icon"
                                    focusable="false"
                                    height="16"
                                    style={null}
                                    viewBox="0 0 16 16"
                                    width="16"
                                    xmlns="http://www.w3.org/2000/svg"
                                  />
                                </empty>
                              </EuiIcon>
                              <span
                                className="euiContextMenuItem__text"
                              >
                                Option #2
                              </span>
                            </span>
                          </button>
                        </EuiContextMenuItem>
                      </div>
                    </div>
                  </EuiMutationObserver>
                </div>
              </EuiPanel>
            </div>
          </FocusTrap>
        </EuiPortal>
      </div>
    </EuiOutsideClickDetector>
  </EuiPopover>
</EuiSuperSelect>
`;

exports[`EuiSuperSelect props options are rendered when select is open 1`] = `
<div
  class="euiPopover euiPopover--anchorDownCenter euiSuperSelect"
>
  <div
    class="euiPopover__anchor"
  >
    <input
      type="hidden"
      value=""
    />
    <div
      class="euiFormControlLayout"
    >
      <div
        class="euiFormControlLayout__childrenWrapper"
      >
        <span
          class="euiScreenReaderOnly"
          id="generated-id"
        >
          Select an option: , is selected
        </span>
        <button
          aria-haspopup="true"
          aria-labelledby="undefined generated-id"
          class="euiSuperSelectControl euiSuperSelect--isOpen__button"
          data-test-subj="superSelect"
          role="option"
          type="button"
        />
        <div
          class="euiFormControlLayoutIcons euiFormControlLayoutIcons--right"
        >
          <span
            class="euiFormControlLayoutCustomIcon"
          >
            <svg
              aria-hidden="true"
              class="euiIcon euiIcon--medium euiFormControlLayoutCustomIcon__icon"
              focusable="false"
              height="16"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
              xmlns:xlink="http://www.w3.org/1999/xlink"
            >
              <defs>
                <path
                  d="M13.069 5.157L8.384 9.768a.546.546 0 0 1-.768 0L2.93 5.158a.552.552 0 0 0-.771 0 .53.53 0 0 0 0 .759l4.684 4.61c.641.631 1.672.63 2.312 0l4.684-4.61a.53.53 0 0 0 0-.76.552.552 0 0 0-.771 0z"
                  id="arrow_down-a"
                />
              </defs>
              <use
                fill-rule="nonzero"
                xlink:href="#arrow_down-a"
              />
            </svg>
          </span>
        </div>
      </div>
    </div>
  </div>
  <div>
    <div
      aria-live="assertive"
      class="euiPanel euiPopover__panel euiPopover__panel--bottom euiPopover__panel-noArrow euiSuperSelect__popoverPanel"
      style="top: 8px; left: -22px; z-index: 0;"
    >
      <div
        class="euiPopover__panelArrow euiPopover__panelArrow--bottom"
      />
      <div>
        <p
          class="euiScreenReaderOnly"
          role="alert"
        >
          You are in a form selector of 2 items and must select a single option. Use the up and down keys to navigate or escape to close.
        </p>
        <div
          role="listbox"
        >
          <button
            class="euiContextMenuItem euiSuperSelect__item"
            id="1"
            role="option"
            type="button"
          >
            <span
              class="euiContextMenu__itemLayout"
            >
              <svg
                class="euiIcon euiIcon--medium euiContextMenu__icon"
                focusable="false"
                height="16"
                viewBox="0 0 16 16"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              />
              <span
                class="euiContextMenuItem__text"
              >
                Option #1
              </span>
            </span>
          </button>
          <button
            class="euiContextMenuItem euiSuperSelect__item"
            id="2"
            role="option"
            type="button"
          >
            <span
              class="euiContextMenu__itemLayout"
            >
              <svg
                class="euiIcon euiIcon--medium euiContextMenu__icon"
                focusable="false"
                height="16"
                viewBox="0 0 16 16"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              />
              <span
                class="euiContextMenuItem__text"
              >
                Option #2
              </span>
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`EuiSuperSelect props select component is rendered 1`] = `
<div
  class="euiPopover euiPopover--anchorDownCenter euiSuperSelect"
>
  <div
    class="euiPopover__anchor"
  >
    <input
      type="hidden"
      value=""
    />
    <div
      class="euiFormControlLayout"
    >
      <div
        class="euiFormControlLayout__childrenWrapper"
      >
        <span
          class="euiScreenReaderOnly"
          id="generated-id"
        >
          Select an option: , is selected
        </span>
        <button
          aria-haspopup="true"
          aria-labelledby="undefined generated-id"
          class="euiSuperSelectControl"
          role="option"
          type="button"
        />
        <div
          class="euiFormControlLayoutIcons euiFormControlLayoutIcons--right"
        >
          <span
            class="euiFormControlLayoutCustomIcon"
          >
            <svg
              aria-hidden="true"
              class="euiIcon euiIcon--medium euiFormControlLayoutCustomIcon__icon"
              focusable="false"
              height="16"
              viewBox="0 0 16 16"
              width="16"
              xlink="http://www.w3.org/1999/xlink"
              xmlns="http://www.w3.org/2000/svg"
            >
              <defs>
                <path
                  d="M13.069 5.157L8.384 9.768a.546.546 0 0 1-.768 0L2.93 5.158a.552.552 0 0 0-.771 0 .53.53 0 0 0 0 .759l4.684 4.61c.641.631 1.672.63 2.312 0l4.684-4.61a.53.53 0 0 0 0-.76.552.552 0 0 0-.771 0z"
                  id="arrow_down-a"
                />
              </defs>
              <use
                fill-rule="nonzero"
                href="#arrow_down-a"
              />
            </svg>
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`EuiSuperSelect props valueSelected is rendered 1`] = `
<div
  class="euiPopover euiPopover--anchorDownCenter euiSuperSelect"
>
  <div
    class="euiPopover__anchor"
  >
    <input
      type="hidden"
      value="2"
    />
    <div
      class="euiFormControlLayout"
    >
      <div
        class="euiFormControlLayout__childrenWrapper"
      >
        <span
          class="euiScreenReaderOnly"
          id="generated-id"
        >
          Select an option: Option #2, is selected
        </span>
        <button
          aria-haspopup="true"
          aria-labelledby="undefined generated-id"
          class="euiSuperSelectControl"
          role="option"
          type="button"
        >
          Option #2
        </button>
        <div
          class="euiFormControlLayoutIcons euiFormControlLayoutIcons--right"
        >
          <span
            class="euiFormControlLayoutCustomIcon"
          >
            <svg
              aria-hidden="true"
              class="euiIcon euiIcon--medium euiFormControlLayoutCustomIcon__icon"
              focusable="false"
              height="16"
              viewBox="0 0 16 16"
              width="16"
              xlink="http://www.w3.org/1999/xlink"
              xmlns="http://www.w3.org/2000/svg"
            >
              <defs>
                <path
                  d="M13.069 5.157L8.384 9.768a.546.546 0 0 1-.768 0L2.93 5.158a.552.552 0 0 0-.771 0 .53.53 0 0 0 0 .759l4.684 4.61c.641.631 1.672.63 2.312 0l4.684-4.61a.53.53 0 0 0 0-.76.552.552 0 0 0-.771 0z"
                  id="arrow_down-a"
                />
              </defs>
              <use
                fill-rule="nonzero"
                href="#arrow_down-a"
              />
            </svg>
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;
